@@ -2,8 +2,8 @@ package apiCalls.actions;
 
 import activesupport.dates.Dates;
 import activesupport.faker.FakerUtils;
-import activesupport.http.RestUtils;
 import activesupport.system.Properties;
+import apiCalls.Utils.http.RestUtils;
 import apiCalls.Utils.volBuilders.*;
 import apiCalls.Utils.generic.BaseAPI;
 import apiCalls.Utils.generic.Headers;
@@ -19,7 +19,7 @@ import org.joda.time.LocalDate;
 
 import java.util.*;
 
-public class GrantLicence extends BaseAPI{
+public class GrantLicence extends BaseAPI {
 
     private static final Logger LOGGER = LogManager.getLogger(GrantLicence.class);
     private final EnvironmentType env = EnvironmentType.getEnum(Properties.get("env", true));
@@ -47,12 +47,13 @@ public class GrantLicence extends BaseAPI{
     public GrantLicence(CreateApplication application) {
         this.application = application;
         Dates date = new Dates(LocalDate::new);
-        setDateState(date.getFormattedDate(0, 0, 0, "yyyy-MM-dd"));
+        this.dateState = date.getFormattedDate(0, 0, 0, "yyyy-MM-dd");
     }
 
     public HashMap<String, String> header() throws HttpException {
-        apiHeaders.getApiHeader().put("Authorization", "Bearer " + adminJWT());
-        return (HashMap<String, String>) apiHeaders.getApiHeader();
+        var header = new HashMap<>(apiHeaders.getApiHeader());
+        header.put("Authorization", "Bearer " + adminJWT());
+        return header;
     }
 
     public synchronized ValidatableResponse grantLicence() throws HttpException {
@@ -70,21 +71,18 @@ public class GrantLicence extends BaseAPI{
      */
 
     public synchronized void createOverview() throws HttpException {
-        String overviewResource = URL.build(env, String.format("application/%s/overview/", application.getApplicationId())).toString();
-        String status = "1";
-        String overrideOption = "Y";
-        String transportArea = "D";
-        String trackingId = fetchApplicationInformation(application.getApplicationId(), "applicationTracking.id", null);
-        int applicationVersion = Integer.parseInt(fetchApplicationInformation(application.getApplicationId(), "version", "1"));
-        int applicationTrackingVersion = Integer.parseInt(fetchApplicationInformation(application.getApplicationId(), "applicationTracking.version", "1"));
+        var overviewResource = URL.build(env, "application/%s/overview/".formatted(application.getApplicationId())).toString();
+        var status = "1";
+        var overrideOption = "Y";
+        var transportArea = "D";
+        var trackingId = fetchApplicationInformation(application.getApplicationId(), "applicationTracking.id", null);
+        var applicationVersion = Integer.parseInt(fetchApplicationInformation(application.getApplicationId(), "version", "1"));
+        var applicationTrackingVersion = Integer.parseInt(fetchApplicationInformation(application.getApplicationId(), "applicationTracking.version", "1"));
 
-        // Fetch the applicationReferredToPi value from the application information
-        String applicationReferredToPi = fetchApplicationInformation(application.getApplicationId(), "applicationReferredToPi", null);
-        if (applicationReferredToPi == null || (!applicationReferredToPi.equals("Y") && !applicationReferredToPi.equals("1"))) {
-            applicationReferredToPi = "N"; // Set to "N" if null or not "Y" or "1"
-        }
+        var applicationReferredToPi = fetchApplicationInformation(application.getApplicationId(), "applicationReferredToPi", null);
+        applicationReferredToPi = (applicationReferredToPi == null || (!applicationReferredToPi.equals("Y") && !applicationReferredToPi.equals("1"))) ? "N" : applicationReferredToPi;
 
-        TrackingBuilder tracking = new TrackingBuilder()
+        var tracking = new TrackingBuilder()
                 .withId(trackingId)
                 .withVersion(applicationTrackingVersion)
                 .withAddressesStatus(status)
@@ -107,7 +105,7 @@ public class GrantLicence extends BaseAPI{
                 .withVehiclesPsvStatus(status)
                 .withTaxiPhvStatus(status);
 
-        OverviewBuilder overview = new OverviewBuilder()
+        var overview = new OverviewBuilder()
                 .withId(application.getApplicationId())
                 .withVersion(applicationVersion)
                 .withLeadTcArea(transportArea)
@@ -115,13 +113,12 @@ public class GrantLicence extends BaseAPI{
                 .withOverrideOppositionDate(overrideOption)
                 .withApplicationReferredToPi(applicationReferredToPi);
 
-
         apiResponse = RestUtils.put(overview, overviewResource, header());
         Utils.checkHTTPStatusCode(apiResponse, HttpStatus.SC_OK);
     }
 
     public synchronized void getOutstandingFees() throws HttpException {
-        String getOutstandingFeesResource = URL.build(env, String.format("application/%s/outstanding-fees/", application.getApplicationId())).toString();
+        var getOutstandingFeesResource = URL.build(env, "application/%s/outstanding-fees/".formatted(application.getApplicationId())).toString();
         apiResponse = RestUtils.get(getOutstandingFeesResource, header());
         if (apiResponse.extract().statusCode() != HttpStatus.SC_OK) {
             LOGGER.info(apiResponse.extract().statusCode());
@@ -129,33 +126,43 @@ public class GrantLicence extends BaseAPI{
             throw new HttpException("Invalid response code: " + apiResponse.extract().statusCode());
         } else if (!apiResponse.extract().response().body().jsonPath().getList("outstandingFees.id").isEmpty()) {
             outstandingFeesIds = apiResponse.extract().response().body().jsonPath().getList("outstandingFees.id");
-            List<String> fees = apiResponse.extract().response().body().jsonPath().get("outstandingFees.grossAmount");
-            for (String d : fees) {
+            var fees = apiResponse.extract().response().body().jsonPath().<String>getList("outstandingFees.grossAmount");
+            fees.forEach(d -> {
                 try {
                     feesToPay.add(Double.parseDouble(d));
                 } catch (NumberFormatException e) {
                     e.fillInStackTrace();
                 }
-            }
+            });
         }
     }
 
     public synchronized void payOutstandingFees() throws HttpException {
-        String payer = faker.generateFirstName() + faker.generateLastName();
-        String paymentMethod = "fpm_cash";
-        String slipNo = "123456";
+        var payer = faker.generateFirstName() + faker.generateLastName();
+        var paymentMethod = "fpm_cash";
+        var slipNo = "123456";
 
-        String payOutstandingFeesResource = URL.build(env, "transaction/pay-outstanding-fees/").toString();
-        FeesBuilder feesBuilder = new FeesBuilder().withFeeIds(outstandingFeesIds).withOrganisationId(application.getUserDetails().getOrganisationId()).withApplicationId(application.getApplicationId())
-                .withPaymentMethod(paymentMethod).withReceived(feesToPay.stream().mapToDouble(Double::doubleValue).sum()).withReceiptDate(getDateState()).withPayer(payer).withSlipNo(slipNo);
+        var payOutstandingFeesResource = URL.build(env, "transaction/pay-outstanding-fees/").toString();
+        var feesBuilder = new FeesBuilder()
+                .withFeeIds(outstandingFeesIds)
+                .withOrganisationId(application.getUserDetails().getOrganisationId())
+                .withApplicationId(application.getApplicationId())
+                .withPaymentMethod(paymentMethod)
+                .withReceived(feesToPay.stream().mapToDouble(Double::doubleValue).sum())
+                .withReceiptDate(dateState)
+                .withPayer(payer)
+                .withSlipNo(slipNo);
         apiResponse = RestUtils.post(feesBuilder, payOutstandingFeesResource, header());
         Utils.checkHTTPStatusCode(apiResponse, HttpStatus.SC_CREATED);
     }
 
     public synchronized void grant() throws HttpException {
-        String grantApplicationResource = URL.build(env, String.format("application/%s/grant/", application.getApplicationId())).toString();
-        GrantApplicationBuilder grantApplication = new GrantApplicationBuilder().withId(application.getApplicationId()).withDuePeriod("9")
-                .withAuthority("grant_authority_dl").withCaseworkerNotes("This notes are from the API");
+        var grantApplicationResource = URL.build(env, "application/%s/grant/".formatted(application.getApplicationId())).toString();
+        var grantApplication = new GrantApplicationBuilder()
+                .withId(application.getApplicationId())
+                .withDuePeriod("9")
+                .withAuthority("grant_authority_dl")
+                .withCaseworkerNotes("This notes are from the API");
         apiResponse = RestUtils.put(grantApplication, grantApplicationResource, header());
 
         if (apiResponse.extract().statusCode() != HttpStatus.SC_OK) {
@@ -163,8 +170,8 @@ public class GrantLicence extends BaseAPI{
             LOGGER.info(apiResponse.extract().response().asString());
             throw new HttpException("Invalid response code: " + apiResponse.extract().statusCode());
         } else if (apiResponse.extract().response().asString().contains("fee")) {
-            setFeeId(apiResponse.extract().response().jsonPath().getInt("id.fee"));
-            String apiMessages = apiResponse.extract().jsonPath().get("messages").toString();
+            this.feeId = apiResponse.extract().response().jsonPath().getInt("id.fee");
+            var apiMessages = apiResponse.extract().jsonPath().get("messages").toString();
             if (!apiMessages.contains("Application status updated") && (!apiMessages.contains("Licence status updated"))) {
                 throw new AssertionError("Licence failed to grant through the API.");
             }
@@ -172,15 +179,22 @@ public class GrantLicence extends BaseAPI{
     }
 
     public synchronized ValidatableResponse payGrantFees(String NIFlag) throws HttpException {
-        String payer = faker.generateFirstName() + faker.generateLastName();
-        Double grantFees = NIFlag.equals("Y") ? 449.00 : 401.00;
-        String paymentMethod = "fpm_cash";
-        String slipNo = "123456";
+        var payer = faker.generateFirstName() + faker.generateLastName();
+        var grantFees = NIFlag.equals("Y") ? 449.00 : 401.00;
+        var paymentMethod = "fpm_cash";
+        var slipNo = "123456";
 
-        String payOutstandingFeesResource = URL.build(env, "transaction/pay-outstanding-fees/").toString();
+        var payOutstandingFeesResource = URL.build(env, "transaction/pay-outstanding-fees/").toString();
 
-        FeesBuilder feesBuilder = new FeesBuilder().withFeeIds(Collections.singletonList(feeId)).withOrganisationId(application.getUserDetails().getOrganisationId()).withApplicationId(application.getApplicationId())
-                .withPaymentMethod(paymentMethod).withReceived(grantFees).withReceiptDate(getDateState()).withPayer(payer).withSlipNo(slipNo);
+        var feesBuilder = new FeesBuilder()
+                .withFeeIds(List.of(feeId))
+                .withOrganisationId(application.getUserDetails().getOrganisationId())
+                .withApplicationId(application.getApplicationId())
+                .withPaymentMethod(paymentMethod)
+                .withReceived(grantFees)
+                .withReceiptDate(dateState)
+                .withPayer(payer)
+                .withSlipNo(slipNo);
         apiResponse = RestUtils.post(feesBuilder, payOutstandingFeesResource, header());
 
         Utils.checkHTTPStatusCode(apiResponse, HttpStatus.SC_CREATED);
@@ -189,17 +203,18 @@ public class GrantLicence extends BaseAPI{
     }
 
     private synchronized void variationGrant() throws HttpException {
-        String grantApplicationResource = URL.build(env, String.format("variation/%s/grant/", application.getApplicationId())).toString();
-        GenericBuilder grantVariationBuilder = new GenericBuilder().withId(application.getApplicationId());
+        var grantApplicationResource = URL.build(env, "variation/%s/grant/".formatted(application.getApplicationId())).toString();
+        var grantVariationBuilder = new GenericBuilder().withId(application.getApplicationId());
         apiResponse = RestUtils.put(grantVariationBuilder, grantApplicationResource, header());
 
         Utils.checkHTTPStatusCode(apiResponse, HttpStatus.SC_OK);
-
     }
 
     public synchronized void refuse(String applicationId) throws HttpException {
-        String grantApplicationResource = URL.build(env, String.format("application/%s/refuse/", applicationId)).toString();
-        GrantApplicationBuilder grantApplication = new GrantApplicationBuilder().withId(applicationId).withCaseworkerNotes("This notes are from the API");
+        var grantApplicationResource = URL.build(env, "application/%s/refuse/".formatted(applicationId)).toString();
+        var grantApplication = new GrantApplicationBuilder()
+                .withId(applicationId)
+                .withCaseworkerNotes("This notes are from the API");
         apiResponse = RestUtils.put(grantApplication, grantApplicationResource, header());
 
         if (apiResponse.extract().statusCode() != HttpStatus.SC_OK) {
@@ -207,13 +222,15 @@ public class GrantLicence extends BaseAPI{
             LOGGER.info(apiResponse.extract().response().asString());
             throw new HttpException("Invalid response code: " + apiResponse.extract().statusCode());
         } else if (apiResponse.extract().response().asString().contains("fee")) {
-            setFeeId(apiResponse.extract().response().jsonPath().getInt("id.fee"));
+            this.feeId = apiResponse.extract().response().jsonPath().getInt("id.fee");
         }
     }
 
     public synchronized void withdraw(String applicationId) throws HttpException {
-        String grantApplicationResource = URL.build(env, String.format("application/%s/withdraw/", applicationId)).toString();
-        GrantApplicationBuilder grantApplication = new GrantApplicationBuilder().withId(applicationId).withReason("reg_in_error");
+        var grantApplicationResource = URL.build(env, "application/%s/withdraw/".formatted(applicationId)).toString();
+        var grantApplication = new GrantApplicationBuilder()
+                .withId(applicationId)
+                .withReason("reg_in_error");
         apiResponse = RestUtils.put(grantApplication, grantApplicationResource, header());
 
         if (apiResponse.extract().statusCode() != HttpStatus.SC_OK) {
@@ -221,7 +238,7 @@ public class GrantLicence extends BaseAPI{
             LOGGER.info(apiResponse.extract().response().asString());
             throw new HttpException("Invalid response code: " + apiResponse.extract().statusCode());
         } else if (apiResponse.extract().response().asString().contains("fee")) {
-            setFeeId(apiResponse.extract().response().jsonPath().getInt("id.fee"));
+            this.feeId = apiResponse.extract().response().jsonPath().getInt("id.fee");
         }
     }
 }
